# PaintItRed

./: CMakeLists.txt  README.md  main.cpp
Engine/Core/: Agent.cpp  Agent.h  AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  GameState.cpp  GameState.h  InputManager.cpp  InputManager.h  StateMachine.cpp  StateMachine.h
Engine/Helpers/: ErrorLogging.cpp  ErrorLogging.h  Utilities.cpp  Utilities.h
Engine/UI/: Button.cpp  Button.h  Menu_Scale.cpp  Menu_Scale.h
Game/Agents/: Player.cpp  Player.h
Game/Data/: Definitions.h
Game/Gameplay/: Bullet.cpp  Bullet.h  FloorCanvas.cpp  FloorCanvas.h  Splatter.cpp  Splatter.h
Game/States/: GameState_Gameplay.cpp  GameState_Gameplay.h  GameState_LevelSelect.cpp  GameState_LevelSelect.h  GameState_MainMenu.cpp  GameState_MainMenu.h  GameState_Splash.cpp  GameState_Splash.h
